# Mali_OpenCL_SDK

./: .gitignore  platform.mk
common/: CMakeLists.txt  Makefile  common.cpp
docs/html/: 64__bit__integer_8cl.html  64__bit__integer_8cl.js  64__bit__integer_8cl_source.html  64__bit__integer_8cpp.html  64__bit__integer_8cpp.js  64__bit__integer_8cpp_source.html  64__bit__integer_8dox.html  annotated.html  classes.html  common_8cpp.html  common_8cpp.js  common_8cpp_source.html  common_8h.html  common_8h.js  common_8h_source.html  common__errors_8dox.html  common_issues.html  dir_0289395444cf489a29bc36f15be66f35.html  dir_0289395444cf489a29bc36f15be66f35.js  dir_0dae9d24a39dcc22094c5116ff3a8be1.html  dir_0dae9d24a39dcc22094c5116ff3a8be1.js  dir_10f12679427188891e820fce3e11401a.html  dir_10f12679427188891e820fce3e11401a.js  dir_2057de030161fe0957379729a87c463f.html  dir_2057de030161fe0957379729a87c463f.js  dir_33f3275c1127fb7d435e719a53b54021.html  dir_33f3275c1127fb7d435e719a53b54021.js  dir_3d70ec2e68ff85e042132c1108ba337a.html  dir_3d70ec2e68ff85e042132c1108ba337a.js  dir_490217e45394b06d48a471b031b70a3e.html  dir_490217e45394b06d48a471b031b70a3e.js  dir_536689d07d4a9d8d4d9f119eb2909e9b.html  dir_536689d07d4a9d8d4d9f119eb2909e9b.js  dir_53e809feb72b43d0f52f5efc50237d2d.html  dir_53e809feb72b43d0f52f5efc50237d2d.js  dir_6f9635d4fbfa321d4c00f29df5cd540c.html  dir_6f9635d4fbfa321d4c00f29df5cd540c.js  dir_75d5c689b70aefa142bdf5ebcb7d98a3.html  dir_75d5c689b70aefa142bdf5ebcb7d98a3.js  dir_75f962b3696c1618a5722e38faad1027.html  (+143 more)
lib/: Makefile  opencl_stubs.c
samples/64_bit_integer/: 64_bit_integer.cpp  Makefile
samples/fir_float/: Makefile  fir_float.cpp
samples/hello_world_c/: Makefile  hello_world_c.cpp
samples/hello_world_opencl/: Makefile  hello_world_opencl.cpp
samples/hello_world_vector/: Makefile  hello_world_vector.cpp
samples/image_scaling/: CMakeLists.txt  GNUARM_all.sh  Makefile  arm-gnueabi.toolchain.cmake  build_arm_gnueabi_cmake.sh  image_scaling.cpp
samples/mandelbrot/: Makefile  mandelbrot.cpp
samples/sgemm/: Makefile  sgemm.cpp
samples/sobel/: Makefile  sobel.cpp
samples/sobel_no_vectors/: Makefile  sobel_no_vectors.cpp
samples/template/: Makefile  (+1 more)
(+66 files in other folders)
